@@ -3,6 +3,9 @@
 ===========
 
 * Bug fix on CLI command validation
+* Added call to get details for systems, scenarios, and deployment
+* Added call to list templates in a cloudspace
+* Added call to list virtualization realm bindings for a deployment
 
 0.0.10
 ======
